SFDCProject/src/objects/Investor_Data__c.object
<CustomObject>
    <description>Source Data FROM BI.</description>
    <fields>
        <fullName>ACH_Payment__c</fullName>
        <label>ACH Payment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Agreement_Number__c</fullName>
        <label>Agreement Number</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Asset_Status__c</fullName>
        <label>Asset Status</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Billings_Lags__c</fullName>
        <label>Billings Lags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContractNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Contract</label>
        <referenceTo>ServiceContract</referenceTo>
        <relationshipName>Investor_Custom_Object</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Degradation__c</fullName>
        <label>Contract Degradation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Cumulative_Production__c</fullName>
        <label>Cumulative Production</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Period_PBI_Payment_Amount__c</fullName>
        <label>Current Period PBI Payment Amount</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Product_Type__c</fullName>
        <label>Current Product Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Name__c</fullName>
        <label>Customer Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Signoff__c</fullName>
        <label>Customer Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Degradation__c</fullName>
        <label>Degradation</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Prod__c</fullName>
        <label>Estimated Annual Prod</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FICO_Score__c</fullName>
        <label>FICO Score</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Payment_Due_Date__c</fullName>
        <label>First Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Full_System_Cost__c</fullName>
        <label>Full System Cost</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fund__c</fullName>
        <label>Fund</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Generation_PPA_Billing_Type__c</fullName>
        <label>Generation PPA Billing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Generation__c</fullName>
        <label>Generation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Guaranteed_Production_Cumulative_kWh__c</fullName>
        <label>Guaranteed Production (Cumulative kWh)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>In_Service_Date__c</fullName>
        <label>In Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>In_TE_Fund__c</fullName>
        <label>In TE Fund</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Installer__c</fullName>
        <label>Installer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inverter_Manufacturer__c</fullName>
        <label>Inverter Manufacturer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inverter_Model__c</fullName>
        <label>Inverter Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inverter_Type__c</fullName>
        <label>Inverter Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_PBI_Date__c</fullName>
        <label>Last PBI Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Payment_Due_Date__c</fullName>
        <label>Last Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Period_PBI_Payment_Amount__c</fullName>
        <label>Last Period PBI Payment Amount</label>
        <precision>17</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Payment_1_Year__c</fullName>
        <label>Lease Payment_1_Year</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Payment__c</fullName>
        <label>Lease Payment</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Lease_Rate_Per_KW__c</fullName>
        <label>Lease Rate Per KW</label>
        <precision>8</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M0_Amount__c</fullName>
        <label>M0 Amount</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M0_Payment_Date__c</fullName>
        <label>M0 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_Amount__c</fullName>
        <label>M1 Amount</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M1_Payment_Date__c</fullName>
        <label>M1 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M1_Proof_Date__c</fullName>
        <label>M1 Proof Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_Payment_Date__c</fullName>
        <label>M2 Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M2_Proof_Date__c</fullName>
        <label>M2 Proof Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>M3_Amount__c</fullName>
        <label>M3 Amount</label>
        <precision>16</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>M3_Proof_Date__c</fullName>
        <label>M3 Proof Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meter_Type__c</fullName>
        <label>Meter Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Net_Metering__c</fullName>
        <label>Net Metering</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Payment_Due_Date__c</fullName>
        <label>Next Payment Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Product_Type__c</fullName>
        <label>Original Product Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Original_Term_of_Agreements__c</fullName>
        <label>Original Term of Agreements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PBI_Rate_Escalator__c</fullName>
        <label>PBI Rate Escalator</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Rate__c</fullName>
        <label>PBI Rate</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBI_Remaining_Term_months__c</fullName>
        <label>PBI Remaining Term (months)</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBI_Terms__c</fullName>
        <label>PBI Terms</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPA_Rate__c</fullName>
        <label>PPA Rate</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Panel_Manufacturer__c</fullName>
        <label>Panel Manufacturer</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Panel_Model__c</fullName>
        <label>Panel Model</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment_Frequency__c</fullName>
        <label>Payment Frequency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Type__c</fullName>
        <label>Payment Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Price_PerKW_Adj_Date__c</fullName>
        <label>Price PerKW Adj Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Price_PerKW__c</fullName>
        <label>Price PerKW</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Production_Guarantee_Level__c</fullName>
        <label>Production Guarantee Level</label>
        <precision>10</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rebate_Type__c</fullName>
        <label>Rebate Type</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refund_Rate_kWh__c</fullName>
        <label>Refund Rate ($/kWh)</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Remaining_Term_of_Agreements__c</fullName>
        <label>Remaining Term of Agreements</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SR_Signoff__c</fullName>
        <label>SR Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Seasoning_of_Months_Since_PTO__c</fullName>
        <label>Seasoning / # of Months Since PTO</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_Size__c</fullName>
        <label>System Size</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Upfront_Payment__c</fullName>
        <label>Total Upfront Payment</label>
        <precision>9</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>234</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility__c</fullName>
        <label>Utility</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yr_1_Avoided_Power_Cost__c</fullName>
        <label>Yr 1 Avoided Power Cost</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zipcode__c</fullName>
        <label>Zipcode</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Investor Data</label>
    <listViews>
        <fullName>Investor_Data</fullName>
        <columns>NAME</columns>
        <columns>Agreement_Number__c</columns>
        <columns>Asset_Status__c</columns>
        <columns>Billings_Lags__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Contract_Degradation__c</columns>
        <columns>County__c</columns>
        <columns>City__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>Investor Data</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Investor Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Investor Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>